<resources>
    <string name="app_name">Orna Companion</string>
    <string name="achievement">achievement</string>
    <string name="passive_skills">Passive skills:</string>
    <string name="skills_learned">Skills learned:</string>
    <string name="character_class_label">CLASS</string>
    <string name="back_button">Go back</string>
    <string name="item">item</string>
    <string name="boss">BOSS</string>
    <string name="weakness">Weakness:</string>
    <string name="resistant_to">Resistant to:</string>
    <string name="immune_to">Immune to:</string>
    <string name="buffs">Buffs:</string>
    <string name="skills">Skills:</string>
    <string name="skills_category">Skills</string>
    <string name="drops">Drops:</string>
    <string name="quests">Quests:</string>
    <string name="monster">MONSTER</string>
    <string name="npc">NPC</string>
    <string name="abilities">Abilities:</string>
    <string name="pet">PET</string>
    <string name="learned_by">Learned by:</string>
    <string name="monsters_use">Monsters use:</string>
    <string name="pets_use">Pets use:</string>
    <string name="skill">SKILL</string>
    <string name="specialization">SPECIALIZATION</string>
    <string name="back">BACK</string>
    <string name="apply_filter">Show %1$s results</string>
    <string name="show_all_results">Show All Results</string>
    <string name="enter_the_stats_of_your_item_to_assess_its_quality">Enter the stats of your item to assess its quality.</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="resistance">Resistance</string>
    <string name="hp">HP</string>
    <string name="magic">Magic</string>
    <string name="mana">Mana</string>
    <string name="dexterity">Dexterity</string>
    <string name="level">Level</string>
    <string name="assess_item">Assess item</string>
    <string name="note_that_170_is_a_crossover_point_of_ornate_and_legendary_qualities_you_can_have_170_ornate_or_legendary_because_of_this_170_has_been_set_to_show_as_legendary">Note that 170% is a crossover point of Ornate and Legendary qualities. You can have 170% Ornate or Legendary. Because of this 170% has been set to show as Legendary.</string>
    <string name="usable_by">Usable by:</string>
    <string name="dropped_by">Dropped by:</string>
    <string name="reward_for">Reward for:</string>
    <string name="filter">filter</string>
    <string name="coming_soon">Coming soon</string>
    <string name="saved">Saved</string>
    <string name="your_saved_items_will_nappear_here">Your saved items will\nappear here.</string>
    <string name="find_items_monsters_classes_and_more">Find items, monsters, classes and more...</string>
    <string name="your_search_results_will_nappear_here">Your search results will\nappear here.</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_norna_companion">Welcome to\nOrna Companion</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="please_let_the_research_team_know_in_the_discord_server_channel_guide_updates_if_the_assessment_is_off_for_any_item_preferably_in_game_item_screenshots_of_the_unleveled_item_not_of_the_guide_s_assess">Please let the Research Team know in the discord server (channel #guide-updates) if the assessment is off for any item (preferably in-game item screenshots of the unleveled item, not of the guide\'s assess).</string>
    <string name="bookmark_image">Bookmark image</string>
    <string name="search_image">Search image</string>
    <string name="items">Items</string>
    <string name="monsters">Monsters</string>
    <string name="npcs">NPCs</string>
    <string name="classes">Classes</string>
    <string name="specializations">Specializations</string>
    <string name="achievements">Achievements</string>
    <string name="pets">Pets</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=nl.bryanderidder.ornaguide</string>
    <string name="review_description">Let me know if you have any suggestions, issues or remarks. Thanks :)</string>
    <string name="review">Review this app</string>
    <string name="licenses">Licenses</string>
    <string name="other">Other</string>
    <string name="reddit">Subreddit r/OrnaRPG</string>
    <string name="reddit_orna_url">https://www.reddit.com/r/OrnaRPG/</string>
    <string name="instagram_url">https://www.instagram.com/ornarpg/</string>
    <string name="github_issues_url">https://github.com/Bryanx/orna-companion/issues</string>
    <string name="orna_discord_url">https://discord.gg/fej9E9j</string>
    <string name="discord">Discord Orna: The GPS RPG</string>
    <string name="ornaguide_url">https://orna.guide/</string>
    <string name="ornaguide">Orna.Guide</string>
    <string name="sync">Sync with Orna.Guide</string>
    <string name="sync_description">This can take a few minutes. This is only necessary for new objects, existing objects are synced automatically.</string>
    <string name="customization">Customization</string>
    <string name="community">Community</string>
    <string name="credit_list">Actu8tr, aimbotzach, AncientKBird, Beardmonster, Biokemyst, blank, Ceimir, Coreonysis, eazyx, Flicsmo, izzy, Jakovious, Jensen, JohnDragon, Karzdan, Levelz, Major, MattNo5ss, napalminator, nimu, NovaKane, PuzzleKnight, Polygons, Ryan Ogi, Stack, Suugin, tagzrdum, The Lotus Note, and all members of the Discord who have posted screenshots and collected data to make all this possible.</string>
    <string name="credit_header">Thanks to all who have helped (Discord name)</string>
    <string name="trouble_information">First check if the information is available/correct on Orna.Guide. If it is only incorrect in this app, syncing will fix this. If it is also incorrect on Orna.Guide please contact anyone in the Research Team on Discord. Take screenshots!</string>
    <string name="trouble_header">Missing/incorrect information</string>
    <string name="contact_content">The content displayed in this app is completely based on Orna.Guide.</string>
    <string name="contact">Contact</string>
    <string name="go_to_ornaguide">Go to Orna.Guide</string>
    <string name="join_orna_discord_server">Join orna Discord server</string>
    <string name="same_size_discover">Same-size discover items</string>
    <string name="same_size_summary">Makes all database results in the discover overview the same size.</string>
    <string name="ward">Ward</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://www.notion.so/bryanderidder/Privacy-Policy-f32bc533710b4136a742faab82bacf5c</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_url">https://www.notion.so/bryanderidder/Terms-and-Conditions-0b52fbb1b83145379a09b49ce0be07ee</string>
    <string name="guides_will_appear_here">Guides will appear here</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="guides">Guides</string>
    <string name="crit">Crit</string>
    <string name="immunities">Immunities:</string>
    <string name="gives">Gives:</string>
    <string name="more">More</string>
    <string name="crash_reports">Crash reports</string>
    <string name="crash_reports_summary">Send a crash report when this app crashes. This greatly helps improve the app!</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="crash_reports_dialog_title">Enable crash reports</string>
    <string name="crash_reports_dialog_description">Do you want to send a crash report when this app crashes? This greatly helps improve the app!</string>
    <string name="reset">RESET</string>
    <string name="cures">Cures:</string>
    <string name="view_distance">+View distance</string>
    <string name="causes">Causes:</string>
    <string name="buffed_by">Buffed by:</string>
    <string name="missing_data_placeholder">Go to \'More\' - \'Sync with Orna.Guide\'\nto get the latest data.</string>
    <string name="close">Close</string>
    <string name="report_placeholder">Quality 135%\nFamed\n\nGodforged\nDef:719 Dex:36 Res:203\n \nDemonforged\nDef:680 Dex:34 Res:192\n \nMasterforged\nDef:641 Dex:32 Res:181\n \nLevel 10\nDef:603 Dex:30 Res:171\n \nLevel 9\nDef:569 Dex:28 Res:161\n \nLevel 8\nDef:535 Dex:26 Res:152\n \nLevel 7\nDef:501 Dex:24 Res:142\n \nLevel 6\nDef:468 Dex:22 Res:133\n \nLevel 5\nDef:434 Dex:20 Res:123</string>
    <string name="item_assessment_image">Item assessment image</string>
</resources>