<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:key="top">

        <Preference
            app:icon="@drawable/ic_baseline_sync_24"
            app:key="syncWithOrnaGuide"
            app:layout="@layout/preference_setting"
            app:summary="@string/sync_description"
            app:title="@string/sync" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization">

        <ListPreference
            app:defaultValue="1"
            app:dialogTitle="@string/default_tier_filter_description"
            app:entries="@array/tiers"
            app:entryValues="@array/tier_entries"
            app:icon="@drawable/ic_baseline_star_24"
            app:key="DEFAULT_TIER"
            app:title="@string/default_tier_filter"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_grid_view_24"
            app:key="SAME_SIZE_DISCOVER_ITEMS"
            app:title="@string/same_size_discover"
            app:summary="@string/same_size_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/community">

        <Preference
            app:icon="@drawable/compass"
            app:layout="@layout/preference_setting"
            app:title="@string/ornaguide">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/ornaguide_url" />
        </Preference>

        <Preference
            app:icon="@drawable/ic_discord"
            app:layout="@layout/preference_setting"
            app:title="@string/discord">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/orna_discord_url" />
        </Preference>

        <Preference
            app:icon="@drawable/ic_reddit"
            app:layout="@layout/preference_setting"
            app:title="@string/reddit">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/reddit_orna_url" />
        </Preference>

        <Preference
            app:icon="@drawable/fb"
            app:layout="@layout/preference_setting"
            app:title="Facebook OrnaRPG">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.facebook.com/ornarpg/" />
        </Preference>

        <Preference
            app:icon="@drawable/ic_insta"
            app:layout="@layout/preference_setting"
            app:title="Instagram @OrnaRPG">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/instagram_url" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
            app:icon="@drawable/ic_baseline_play_circle_24"
            app:key="rate"
            app:layout="@layout/preference_setting"
            app:summary="@string/review_description"
            app:title="@string/review" />

        <Preference
            app:icon="@drawable/ic_baseline_privacy_tip_24"
            app:key="license"
            app:layout="@layout/preference_setting"
            app:title="@string/licenses" />

        <Preference
            app:icon="@drawable/ic_baseline_chat_24"
            app:key="contact"
            app:layout="@layout/preference_setting"
            app:title="Contact" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
