<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemEquippedByAdapter"
            type="nl.bryanderidder.ornaguide.item.ui.detail.ItemEquippedByAdapter" />

        <variable
            name="itemDroppedByAdapter"
            type="nl.bryanderidder.ornaguide.item.ui.detail.ItemDroppedByAdapter" />

        <variable
            name="itemMaterialsAdapter"
            type="nl.bryanderidder.ornaguide.item.ui.detail.ItemMaterialsAdapter" />

        <variable
            name="itemQuestsAdapter"
            type="nl.bryanderidder.ornaguide.item.ui.detail.ItemQuestsAdapter" />

        <variable
            name="vm"
            type="nl.bryanderidder.ornaguide.item.ui.detail.ItemDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/immunities"
            android:paddingTop="@dimen/cardDividerPadding"
            style="@style/databaseItemPageDescription"
            android:text="@string/immunities"
            app:gone="@{vm.item.immunities.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/immunitiesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@{vm.item.formattedImmunities()}"
            app:gone="@{vm.item.immunities.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/immunities"
            tools:listitem="@layout/item_item_equipped_by"
            tools:text="T. Dex ↓\nT. Crit ↑↑"/>

        <TextView
            android:id="@+id/gives"
            android:paddingTop="@dimen/cardDividerPadding"
            style="@style/databaseItemPageDescription"
            android:text="@string/gives"
            app:gone="@{vm.item.gives.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/immunitiesList"/>

        <TextView
            android:id="@+id/givesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@{vm.item.formattedGives()}"
            app:gone="@{vm.item.gives.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gives"
            tools:listitem="@layout/item_item_equipped_by"
            tools:text="T. Dex ↓\nT. Crit ↑↑"/>

        <TextView
            android:id="@+id/equippedBy"
            android:paddingTop="@dimen/cardDividerPadding"
            style="@style/databaseItemPageDescription"
            android:text="@string/usable_by"
            app:gone="@{vm.item.equippedBy.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/givesList"/>

        <nl.bryanderidder.ornaguide.shared.ui.FlexRecyclerView
            android:id="@+id/equippedByList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:paddingTop="6dp"
            android:scrollbarStyle="outsideOverlay"
            app:gone="@{vm.item.equippedBy.isEmpty()}"
            app:itemEquippedByAdapter="@{itemEquippedByAdapter}"
            app:itemEquippedByList="@{vm.item.equippedBy}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equippedBy"
            tools:listitem="@layout/item_item_equipped_by" />

        <TextView
            android:id="@+id/droppedBy"
            android:paddingTop="@dimen/cardPadding"
            style="@style/databaseItemPageDescription"
            android:text="@string/dropped_by"
            app:gone="@{vm.item.droppedByIncludingArena().isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/equippedByList" />

        <nl.bryanderidder.ornaguide.shared.ui.FlexRecyclerView
            android:id="@+id/droppedByList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:paddingTop="6dp"
            android:scrollbarStyle="outsideOverlay"
            app:gone="@{vm.item.droppedByIncludingArena().isEmpty()}"
            app:itemDroppedByAdapter="@{itemDroppedByAdapter}"
            app:itemDroppedByList="@{vm.item.droppedByIncludingArena()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/droppedBy"
            tools:listitem="@layout/item_item_dropped_by" />

        <TextView
            android:id="@+id/materials"
            android:paddingTop="@dimen/cardPadding"
            style="@style/databaseItemPageDescription"
            android:text="@{vm.item.formattedMaterialsLabel()}"
            app:gone="@{vm.item.materials.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/droppedByList" />

        <nl.bryanderidder.ornaguide.shared.ui.FlexRecyclerView
            android:id="@+id/materialsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:paddingTop="6dp"
            android:scrollbarStyle="outsideOverlay"
            app:gone="@{vm.item.materials.isEmpty()}"
            app:itemMaterialsAdapter="@{itemMaterialsAdapter}"
            app:itemMaterialsList="@{vm.item.materials}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materials"
            tools:listitem="@layout/item_item_detail" />

        <TextView
            android:id="@+id/quests"
            android:paddingTop="@dimen/cardPadding"
            style="@style/databaseItemPageDescription"
            android:text="@string/reward_for"
            app:gone="@{vm.item.quests.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialsList" />

        <nl.bryanderidder.ornaguide.shared.ui.FlexRecyclerView
            android:id="@+id/questsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadeScrollbars="false"
            android:overScrollMode="never"
            android:paddingTop="6dp"
            android:scrollbarStyle="outsideOverlay"
            app:gone="@{vm.item.quests.isEmpty()}"
            app:itemQuestsAdapter="@{itemQuestsAdapter}"
            app:itemQuestsList="@{vm.item.quests}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quests"
            tools:listitem="@layout/item_item_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>